@@ -2,13 +2,13 @@
 
 [General Info]
 Version=1
-LastClass=CChildView
+LastClass=CSongInfoDlg
 LastTemplate=CDialog
 NewFileInclude1=#include "stdafx.h"
 NewFileInclude2=#include "psycle.h"
 LastPage=0
 
-ClassCount=43
+ClassCount=44
 Class1=CChildView
 Class2=CConfigDlg
 Class3=CDefaultVstGui
@@ -54,47 +54,48 @@ Class42=CWavFileDlg
 Class43=CWireDlg
 
 ResourceCount=42
-Resource1=IDD_GEAR_GAINER (Neutral (Default))
-Resource2=IDD_PRESETS (Neutral (Default))
+Resource1=IDD_INFO (Neutral (Default))
+Resource2=IDD_GEARDISTORT (Neutral (Default))
 Resource3=IDR_VSTFRAME (Neutral (Default))
 Resource4=IDR_POPUPMENU (Neutral (Default))
-Resource5=IDD_MIDI_LEARN
-Resource6=IDD_DIRECTORIES (Neutral (Default))
-Resource7=IDD_MASTERDLG (Neutral (Default))
-Resource8=IDD_GREETS (Neutral (Default))
-Resource9=IDD_VSTRACK (Neutral (Default))
-Resource10=IDR_WAVEFRAME (Neutral (Default))
-Resource11=IDD_MIDI_INPUT
-Resource12=IDD_KEYCONFIG (Neutral (Default))
-Resource13=IDD_MIDI_MONITOR (Neutral (Default))
-Resource14=IDD_ABOUTBOX (Neutral (Default))
-Resource15=IDD_ENVDIALOG (Neutral (Default))
+Resource5=IDD_GEAR_DELAY (Neutral (Default))
+Resource6=IDD_MACPROP (Neutral (Default))
+Resource7=IDD_ABOUTBOX (Neutral (Default))
+Resource8=IDD_CONFIGURATION (Neutral (Default))
+Resource9=IDD_SWINGFILL
+Resource10=IDD_OUTPUT (Neutral (Default))
+Resource11=IDD_GEAR_GAINER (Neutral (Default))
+Resource12=IDD_GEAR_FILTER (Neutral (Default))
+Resource13=IDD_SEQUENCER (Neutral (Default))
+Resource14=IDD_PSYBAR (Neutral (Default))
+Resource15=IDD_SONGPROP (Neutral (Default))
 Resource16=IDD_INSTRUMENT (Neutral (Default))
-Resource17=IDD_INFO (Neutral (Default))
-Resource18=IDR_MACHINEFRAME (Neutral (Default))
-Resource19=IDD_NEWMACHINE (Neutral (Default))
-Resource20=IDD_GEAR_FILTER (Neutral (Default))
-Resource21=IDD_INST_EDITOR (Neutral (Default))
-Resource22=IDD_WAVED_AMPLIFY (Neutral (Default))
-Resource23=IDD_OUTPUT (Neutral (Default))
-Resource24=IDD_SWINGFILL
-Resource25=IDD_CONFIGURATION (Neutral (Default))
-Resource26=IDD_GEAR_PSYCHOSC (Neutral (Default))
-Resource27=IDD_WAVEOUTCONFIG (Neutral (Default))
-Resource28=IDD_PSYBAR2 (Neutral (Default))
-Resource29=IDD_SONGPROP (Neutral (Default))
+Resource17=IDR_MACHINEFRAME (Neutral (Default))
+Resource18=IDD_WAVEOUTCONFIG (Neutral (Default))
+Resource19=IDD_MIDI_INPUT
+Resource20=IDR_WAVEFRAME (Neutral (Default))
+Resource21=IDD_PRESETS (Neutral (Default))
+Resource22=IDD_VSTRACK (Neutral (Default))
+Resource23=IDD_DIRECTORIES (Neutral (Default))
+Resource24=IDD_PSYBAR2 (Neutral (Default))
+Resource25=IDD_PATDLG (Neutral (Default))
+Resource26=IDD_NEWVAL (Neutral (Default))
+Resource27=IDD_DSOUNDCONFIG (Neutral (Default))
+Resource28=IDD_SKIN (Neutral (Default))
+Resource29=IDD_ENVDIALOG (Neutral (Default))
 Resource30=IDD_WIREDIALOG (Neutral (Default))
-Resource31=IDD_GEAR_FLANGER (Neutral (Default))
-Resource32=IDD_SKIN (Neutral (Default))
-Resource33=IDD_NEWVAL (Neutral (Default))
-Resource34=IDD_MACPROP (Neutral (Default))
-Resource35=IDD_DSOUNDCONFIG (Neutral (Default))
-Resource36=IDD_GEAR_DELAY (Neutral (Default))
-Resource37=IDD_GEARDISTORT (Neutral (Default))
-Resource38=IDD_PSYBAR (Neutral (Default))
-Resource39=IDD_PATDLG (Neutral (Default))
-Resource40=IDD_SEQUENCER (Neutral (Default))
-Resource41=IDD_GEAR_TRACKER (Neutral (Default))
+Resource31=IDD_MIDI_LEARN
+Resource32=IDD_INST_EDITOR (Neutral (Default))
+Resource33=IDD_GEAR_TRACKER (Neutral (Default))
+Resource34=IDD_MASTERDLG (Neutral (Default))
+Resource35=IDD_KEYCONFIG (Neutral (Default))
+Resource36=IDD_WAVED_AMPLIFY (Neutral (Default))
+Resource37=IDD_MIDI_MONITOR (Neutral (Default))
+Resource38=IDD_GEAR_FLANGER (Neutral (Default))
+Resource39=IDD_NEWMACHINE (Neutral (Default))
+Resource40=IDD_GREETS (Neutral (Default))
+Resource41=IDD_GEAR_PSYCHOSC (Neutral (Default))
+Class44=CSongInfoDlg
 Resource42=IDR_MAINFRAME (Neutral (Default))
 
 [CLS:CChildView]
@@ -1090,12 +1091,12 @@ Control4=IDOK,button,1342242817
 [DLG:IDD_SKIN (Neutral (Default))]
 Type=1
 Class=?
-ControlCount=28
+ControlCount=35
 Control1=IDC_STATIC,button,1342177287
 Control2=IDC_STATIC,static,1476526080
 Control3=IDC_FONTFACE,combobox,1478557954
 Control4=IDC_STATIC,button,1342177287
-Control5=IDC_BUTTON1,button,1342242816
+Control5=IDC_BG_COLOUR,button,1342242816
 Control6=IDC_STATIC,button,1342177287
 Control7=IDC_BUTTON23,button,1342242816
 Control8=IDC_BUTTON24,button,1342242816
@@ -1119,6 +1120,13 @@ Control25=IDC_VU1_CAN,static,1342181381
 Control26=IDC_VU2_CAN,static,1342181381
 Control27=IDC_VU3_CAN,static,1342181381
 Control28=IDC_MBG_CAN,static,1342181381
+Control29=IDC_WIRE_COLOUR,button,1342242816
+Control30=IDC_POLY_COLOUR,button,1342242816
+Control31=IDC_MWIRE_COL,static,1342181381
+Control32=IDC_MPOLY_COL,static,1342181381
+Control33=IDC_AAWIRE,button,1342242819
+Control34=IDC_WIRE_WIDTH,combobox,1344340226
+Control35=IDC_STATIC,static,1342308864
 
 [DLG:IDD_SONGPROP (Neutral (Default))]
 Type=1
@@ -1584,4 +1592,13 @@ Command12=ID_VIEW_INSTRUMENTEDITOR
 Command13=ID_PSYHELP
 Command14=ID_ABOUTPSYCLE
 CommandCount=14
+
+[CLS:CSongInfoDlg]
+Type=0
+HeaderFile=SongInfoDlg.h
+ImplementationFile=SongInfoDlg.cpp
+BaseClass=CDialog
+Filter=D
+VirtualFilter=dWC
+LastObject=CSongInfoDlg
 
